--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,6 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 
-aws.access.key=${AWS_ACCESS_KEY:AKIAXYKJQIFYQT64RN7J}
-aws.secret.key=${AWS_SECRET_KEY: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}
-aws.s3.bucket=${AWS_S3_BUCKET:testexamrn-code}
+aws.access.key=${AWS_ACCESS_KEY}
+aws.secret.key=${AWS_SECRET_KEY}
+aws.s3.bucket=${AWS_S3_BUCKET}
