--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=jdbc:mysql://localhost:3306/hi
-DATABASE_USER=root
+DATABASE_URL=jdbc:mysql://mysql-2c3b7474-youssefouhba-1406.a.aivencloud.com:23229/CityThrillsMorocco
+DATABASE_USER=avnadmin
 DATABASE_DRIVER=com.mysql.cj.jdbc.Driver
-DATABASE_PASSWORD=
+DATABASE_PASSWORD=AVNS_hdj58afUSowWP3eu2GF
