--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
 spring.main.allow-bean-definition-overriding=true
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.driver-class-name=${DATABASE_DRIVER}
-spring.datasource.username=${DATABASE_USER}
-spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=jdbc:mysql://mysql-2c3b7474-youssefouhba-1406.a.aivencloud.com:23229/CityThrillsMorocco
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_hdj58afUSowWP3eu2GF
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
