--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=AVNS_hdj58afUSowWP3eu2GF
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #### swagger for api documentation ###
 springdoc.swagger-ui.path=/swagger-ui-rest.html
