--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:mysql://mysql-2c3b7474-youssefouhba-1406.a.aivencloud
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=avnadmin
 spring.datasource.password=AVNS_hdj58afUSowWP3eu2GF
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
