--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+port=8080
 spring.main.allow-bean-definition-overriding=true
 spring.datasource.url=jdbc:mysql://mysql-2c3b7474-youssefouhba-1406.a.aivencloud.com:23229/CityThrillsMorocco
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
