--- a/pom.xml
+++ b/pom.xml
@@ -257,7 +257,7 @@
 							<goal>npm</goal>
 						</goals>
 						<configuration>
-							<arguments>install --force</arguments>
+							<arguments>install</arguments>
 						</configuration>
 					</execution>
 					<execution>
