--- a/pom.xml
+++ b/pom.xml
@@ -235,21 +235,14 @@
 			<plugin>
 				<groupId>com.github.eirslett</groupId>
 				<artifactId>frontend-maven-plugin</artifactId>
-				<version>1.12.1</version>
-				<configuration>
-					<workingDirectory>AtlasGuide_angular</workingDirectory>
-					<installDirectory>target</installDirectory>
-				</configuration>
+				<version>1.13.3</version>
 				<executions>
 					<execution>
 						<id>install node and npm</id>
 						<goals>
 							<goal>install-node-and-npm</goal>
 						</goals>
-						<configuration>
-							<nodeVersion>v20.11.0</nodeVersion>
-							<npmVersion>10.7.0</npmVersion>
-						</configuration>
+						<phase>generate-resources</phase>
 					</execution>
 					<execution>
 						<id>npm install</id>
@@ -270,23 +263,29 @@
 						</configuration>
 					</execution>
 				</executions>
+				<configuration>
+					<nodeVersion>v18.16.1</nodeVersion>
+					<installDirectory>target</installDirectory>
+					<workingDirectory>AtlasGuide_angular/AtlasGuide_angular-master</workingDirectory>
+				</configuration>
 			</plugin>
 			<plugin>
-				<artifactId>maven-antrun-plugin</artifactId>
+				<artifactId>maven-resources-plugin</artifactId>
 				<executions>
 					<execution>
+						<id>copy-frontend</id>
 						<phase>generate-resources</phase>
-						<configuration>
-							<target>
-								<copy todir="${project.build.directory}/classes/public">
-									<!-- check your frontend's dist or build folders -->
-									<fileset dir="AtlasGuide_angular/AtlasGuide_angular-master/dist/frontend"/>
-								</copy>
-							</target>
-						</configuration>
 						<goals>
-							<goal>run</goal>
+							<goal>copy-resources</goal>
 						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/classes/static/</outputDirectory>
+							<resources>
+								<resource>
+									<directory>/AtlasGuide_angular/AtlasGuide_angular-master/dist/frontend</directory>
+								</resource>
+							</resources>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
