--- a/AtlasGuide_angular/AtlasGuide_angular-master/package.json
+++ b/AtlasGuide_angular/AtlasGuide_angular-master/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json",
+    "start": "ng serve --proxy-config proxy.conf.json --host 0.0.0.0",
     "build": "ng build",
+    "build:prod": "npm run build -- --prod --aot",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
