--- a/pom.xml
+++ b/pom.xml
@@ -192,8 +192,6 @@
 		</dependency>
 	</dependencies>
 
-
-	<!--
 	<build>
 		<plugins>
 			<plugin>
@@ -236,66 +234,6 @@
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
-				<groupId>com.github.eirslett</groupId>
-				<artifactId>frontend-maven-plugin</artifactId>
-				<version>1.13.3</version>
-				<executions>
-					<execution>
-						<id>install node and npm</id>
-						<goals>
-							<goal>install-node-and-npm</goal>
-						</goals>
-						<phase>generate-resources</phase>
-					</execution>
-					<execution>
-						<id>npm install</id>
-						<goals>
-							<goal>npm</goal>
-						</goals>
-						<configuration>
-							<arguments>install</arguments>
-						</configuration>
-					</execution>
-					<execution>
-						<id>npm run build</id>
-						<goals>
-							<goal>npm</goal>
-						</goals>
-						<configuration>
-							<arguments>run build</arguments>
-						</configuration>
-					</execution>
-				</executions>
-				<configuration>
-					<nodeVersion>v20.11.0</nodeVersion>
-					<npmVersion>10.7.0</npmVersion>
-					<installDirectory>target</installDirectory>
-					<workingDirectory>AtlasGuide_angular/AtlasGuide_angular-master</workingDirectory>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-resources-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>copy-frontend</id>
-						<phase>generate-resources</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${project.build.directory}/classes/templates/</outputDirectory>
-							<resources>
-								<resource>
-									<directory>./AtlasGuide_angular/AtlasGuide_angular-master/dist</directory>
-								</resource>
-							</resources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
 		</plugins>
-	</build>-->
-
+	</build>
 </project>
