--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 
 spring.main.allow-bean-definition-overriding=true
 
-spring.datasource.url=jdbc:mysql://mysql-2c3b7474-youssefouhba-1406.a.aivencloud.com:23229/pfs
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=avnadmin
-spring.datasource.password=AVNS_hdj58afUSowWP3eu2GF
+spring.datasource.url=jdbc:postgresql://citythrillsdb_user:YVXb8u1Uj7QP8YDMJdHC8r3Y1nvKYnVz@dpg-ctkvo1tds78s73c328p0-a/citythrillsdb
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=citythrillsdb_user
+spring.datasource.password=YVXb8u1Uj7QP8YDMJdHC8r3Y1nvKYnVz
 spring.jpa.hibernate.ddl-auto=update
 
 
