--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.datasource.url=jdbc:postgresql://citythrillsdb_user:YVXb8u1Uj7QP8YDMJdHC8
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=citythrillsdb_user
 spring.datasource.password=YVXb8u1Uj7QP8YDMJdHC8r3Y1nvKYnVz
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=${SPRING_JPA_DATABASE_PLATFORM:org.hibernate.dialect.PostgreSQLDialect}
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
 
 
 spring.jpa.show-sql=true
