--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 
 spring.main.allow-bean-definition-overriding=true
 
-spring.datasource.url=jdbc:postgresql://citythrillsdb_user:YVXb8u1Uj7QP8YDMJdHC8r3Y1nvKYnVz@dpg-ctkvo1tds78s73c328p0-a/citythrillsdb
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=citythrillsdb_user
-spring.datasource.password=YVXb8u1Uj7QP8YDMJdHC8r3Y1nvKYnVz
+spring.datasource.url=${SUPABASE_DATABASE_URL}
+spring.datasource.username=${SUPABASE_USERNAME}
+spring.datasource.password=${SUPABASE_PASSWORD}
 spring.jpa.database-platform=${SPRING_JPA_DATABASE_PLATFORM:org.hibernate.dialect.PostgreSQLDialect}
 spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
 
